work with icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,22 +15,22 @@
 </head>
 
 <body>
-<header class="header">
-  <div class="container">
-    <nav class="nav">
-      <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
-      <ul class="nav-list">
-        <li class="item"><a class="link" href="./index.html">Студия</a></li>
-        <li class="item"><a class="link active" href="./portfolio.html">Портфолио</a></li>
-        <li class="item"><a class="link" href="#">Контакты</a></li>
+  <header class="header">
+    <div class="container">
+      <nav class="nav">
+        <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
+        <ul class="nav-list">
+          <li class="item"><a class="link active" href="./index.html">Студия</a></li>
+          <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li class="item"><a class="link" href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="contacts-list">
+        <li class="item"><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item"><a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </nav>
-    <ul class="contacts-list">
-      <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </div>
-</header>
+    </div>
+  </header>
   <main>
     <section class="section menu">
       <div class="container">
@@ -136,6 +136,29 @@
           <li class="item"><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+        <p>присоединяйтесь</p>
+        <ul class="list social-networks">
+          <li class="item">
+            <a class="link" href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <svg></svg>
+            </a>
+          </li>
         </ul>
       </address>
     </div>
