--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         </ul>
       </nav>
       <ul class="contacts-list">
-        <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item"><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item"><a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
   <main>
     <section class="hero">
       <div class="container">
-        <h1 class="title hero">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </div>
     </section>
@@ -42,28 +42,28 @@
       <div class="container">
         <h2 class="title">наши преимущества</h2>
         <ul class="list">
-          <li class="item">
+          <li class="item antenna">
             <h3 class="sub-title">Внимание к деталям</h3>
             <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="item">
+          <li class="item clock">
             <h3 class="sub-title">Пунктуальность</h3>
             <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="item">
+          <li class="item diagram">
             <h3 class="sub-title">Планирование</h3>
             <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="item">
+          <li class="item astronaut">
             <h3 class="sub-title">Современные технологии</h3>
             <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -97,28 +97,65 @@
         <h2 class="title">Наша команда</h2>
         <ul class="title-list">
           <li class="item">
-            <img class="photo-worker" src="./images/igor_demyanenko.jpeg" alt="фото Игоря Демьяненко"
-                width="270" height="260" />
+            <img class="photo-worker" src="./images/igor_demyanenko.jpeg" alt="фото Игоря Демьяненко" width="270"
+              height="260" />
             <h3 class="worker-name">Игорь Демьяненко</h3>
             <p class="job-title">Product Designer</p>
           </li>
           <li class="item">
             <img class="photo-worker" src="./images/olga_repina.jpeg" alt="фото Ольги Репиной" width="270"
-                height="260" />
+              height="260" />
             <h3 class="worker-name">Ольга Репина</h3>
             <p class="job-title">Frontend Developer</p>
           </li>
           <li class="item">
-            <img class="photo-worker" src="./images/nikolay_tarasov.jpeg" alt="фото Николая Тарасова"
-                width="270" height="260" />
+            <img class="photo-worker" src="./images/nikolay_tarasov.jpeg" alt="фото Николая Тарасова" width="270"
+              height="260" />
             <h3 class="worker-name">Николай Тарасов</h3>
             <p class="job-title">Marketing</p>
           </li>
           <li class="item">
-            <img class="photo-worker" src="./images/mikhail_ermakov.jpeg" alt="фото Михаила Ермакова"
-                width="270" height="260" />
+            <img class="photo-worker" src="./images/mikhail_ermakov.jpeg" alt="фото Михаила Ермакова" width="270"
+              height="260" />
             <h3 class="worker-name">Михаил Ермаков</h3>
             <p class="job-title">UI Designer</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="our-clients section">
+      <div class="container">
+        <h2 class="title">Постоянные клиенты</h2>
+        <ul class="list">
+          <li class="item">
+            <a href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="">
+              <svg></svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="">
+              <svg></svg>
+            </a>
           </li>
         </ul>
       </div>
