--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
         </ul>
       </nav>
       <ul class="contacts-list">
-        <li class="item"><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="item"><a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item"><a class="link" href="mailto:info@devstudio.com">
+            <svg class="icon envelope">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a></li>
+        <li class="item"><a class="link" href="tel:+380961111111">
+            <svg svg class="icon smartphone">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
+            +38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
@@ -42,28 +50,40 @@
       <div class="container">
         <h2 class="title">наши преимущества</h2>
         <ul class="list">
-          <li class="item antenna">
+          <li class="item">
+            <div class="box"><svg class="icon">
+                <use href="./images/symbol-defs.svg#icon-antenna"></use>
+              </svg></div>
             <h3 class="sub-title">Внимание к деталям</h3>
             <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="item clock">
+          <li class="item">
+            <div class="box"><svg class="icon">
+                <use href="./images/symbol-defs.svg#icon-clock"></use>
+              </svg></div>
             <h3 class="sub-title">Пунктуальность</h3>
             <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="item diagram">
+          <li class="item">
+            <div class="box"><svg class="icon">
+                <use href="./images/symbol-defs.svg#icon-diagram"></use>
+              </svg></div>
             <h3 class="sub-title">Планирование</h3>
             <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="item astronaut">
+          <li class="item">
+            <div class="box"><svg class="icon">
+                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+              </svg></div>
             <h3 class="sub-title">Современные технологии</h3>
             <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -101,24 +121,112 @@
               height="260" />
             <h3 class="worker-name">Игорь Демьяненко</h3>
             <p class="job-title">Product Designer</p>
+            <ul class="social-network">
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
           <li class="item">
             <img class="photo-worker" src="./images/olga_repina.jpeg" alt="фото Ольги Репиной" width="270"
               height="260" />
             <h3 class="worker-name">Ольга Репина</h3>
             <p class="job-title">Frontend Developer</p>
+            <ul class="social-network">
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
           <li class="item">
             <img class="photo-worker" src="./images/nikolay_tarasov.jpeg" alt="фото Николая Тарасова" width="270"
               height="260" />
             <h3 class="worker-name">Николай Тарасов</h3>
             <p class="job-title">Marketing</p>
+            <ul class="social-network">
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
           <li class="item">
             <img class="photo-worker" src="./images/mikhail_ermakov.jpeg" alt="фото Михаила Ермакова" width="270"
               height="260" />
             <h3 class="worker-name">Михаил Ермаков</h3>
             <p class="job-title">UI Designer</p>
+            <ul class="social-network">
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="network-item">
+                <svg class="icon" width="44px" height="44px">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -128,33 +236,45 @@
         <h2 class="title">Постоянные клиенты</h2>
         <ul class="list">
           <li class="item">
-            <a href="">
-              <svg></svg>
+            <a class="link" href="#">
+              <svg class="icon" width="106px" height="60px">
+                  <use href="./images/symbol-defs.svg#icon-Logo1"></use>
+                </svg>
             </a>
           </li>
           <li class="item">
-            <a href="">
-              <svg></svg>
+            <a class="link" href="#">
+              <svg class="icon" width="106px" height="60px">
+                  <use href="./images/symbol-defs.svg#icon-Logo2"></use>
+                </svg>
             </a>
           </li>
           <li class="item">
-            <a href="">
-              <svg></svg>
+            <a class="link" href="#">
+              <svg class="icon" width="106px" height="60px">
+                  <use href="./images/symbol-defs.svg#icon-Logo3"></use>
+                </svg>
             </a>
           </li>
           <li class="item">
-            <a href="">
-              <svg></svg>
+            <a class="link" href="#">
+              <svg class="icon" width="106px" height="60px">
+                  <use href="./images/symbol-defs.svg#icon-Logo4"></use>
+                </svg>
             </a>
           </li>
           <li class="item">
-            <a href="">
-              <svg></svg>
+            <a class="link" href="#">
+              <svg class="icon" width="106px" height="60px">
+                  <use href="./images/symbol-defs.svg#icon-Logo5"></use>
+                </svg>
             </a>
           </li>
           <li class="item">
-            <a href="">
-              <svg></svg>
+            <a class="link" href="#">
+              <svg class="icon" width="106px" height="60px">
+                  <use href="./images/symbol-defs.svg#icon-Logo6"></use>
+                </svg>
             </a>
           </li>
         </ul>
