--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </nav>
       <ul class="contacts-list">
         <li class="item"><a class="link" href="mailto:info@devstudio.com">
-            <svg class="icon envelope">
+            <svg class="icon envelope" width="16px" height="12px">
               <use href="./images/symbol-defs.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a></li>
         <li class="item"><a class="link" href="tel:+380961111111">
-            <svg svg class="icon smartphone">
+            <svg svg class="icon smartphone" width="10px" height="16px">
               <use href="./images/symbol-defs.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11</a></li>
@@ -123,24 +123,24 @@
             <p class="job-title">Product Designer</p>
             <ul class="social-network">
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a>
               </li>
             </ul>
           </li>
@@ -151,24 +151,24 @@
             <p class="job-title">Frontend Developer</p>
             <ul class="social-network">
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a>
               </li>
             </ul>
           </li>
@@ -179,24 +179,24 @@
             <p class="job-title">Marketing</p>
             <ul class="social-network">
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a>
               </li>
             </ul>
           </li>
@@ -207,24 +207,24 @@
             <p class="job-title">UI Designer</p>
             <ul class="social-network">
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a>
               </li>
               <li class="network-item">
-                <svg class="icon" width="44px" height="44px">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
+                <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a>
               </li>
             </ul>
           </li>
@@ -238,43 +238,43 @@
           <li class="item">
             <a class="link" href="#">
               <svg class="icon" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-Logo1"></use>
-                </svg>
+                <use href="./images/symbol-defs.svg#icon-Logo1"></use>
+              </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
               <svg class="icon" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-Logo2"></use>
-                </svg>
+                <use href="./images/symbol-defs.svg#icon-Logo2"></use>
+              </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
               <svg class="icon" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-Logo3"></use>
-                </svg>
+                <use href="./images/symbol-defs.svg#icon-Logo3"></use>
+              </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
               <svg class="icon" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-Logo4"></use>
-                </svg>
+                <use href="./images/symbol-defs.svg#icon-Logo4"></use>
+              </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
               <svg class="icon" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-Logo5"></use>
-                </svg>
+                <use href="./images/symbol-defs.svg#icon-Logo5"></use>
+              </svg>
             </a>
           </li>
           <li class="item">
             <a class="link" href="#">
               <svg class="icon" width="106px" height="60px">
-                  <use href="./images/symbol-defs.svg#icon-Logo6"></use>
-                </svg>
+                <use href="./images/symbol-defs.svg#icon-Logo6"></use>
+              </svg>
             </a>
           </li>
         </ul>
@@ -283,14 +283,41 @@
   </main>
   <footer class="footer">
     <div class="container">
-      <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
-      <address>
-        <ul class="address-list">
-          <li class="item"><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <div class="address-block">
+        <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
+        <address>
+          <ul class="address-list">
+            <li class="item"><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+      <div class="social-network-block">
+        <p class="subscription-title">присоединяйтесь</p>
+        <ul class="social-network footer list">
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg></a>
+          </li>
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg></a>
+          </li>
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg></a>
+          </li>
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg></a>
+          </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
