--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,22 @@
       <nav class="nav">
         <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
         <ul class="nav-list">
-          <li class="item"><a class="link active" href="./index.html">Студия</a></li>
-          <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+          <li class="item"><a class="link" href="./index.html">Студия</a></li>
+          <li class="item"><a class="link active" href="./portfolio.html">Портфолио</a></li>
           <li class="item"><a class="link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contacts-list">
-        <li class="item"><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="item"><a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item"><a class="link" href="mailto:info@devstudio.com">
+            <svg class="icon envelope" width="16px" height="12px">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a></li>
+        <li class="item"><a class="link" href="tel:+380961111111">
+            <svg svg class="icon smartphone" width="10px" height="16px">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
+            +38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
@@ -44,85 +52,85 @@
         </ul>
         <ul class="portfolio-list">
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/laptop.jpeg" alt="включенный ноутбук" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Технокряк</h2>
+                <p class="project-type">Веб-сайт</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Технокряк</h2>
-              <p class="project-type">Веб-сайт</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/two-players.jpeg" alt="два баскетболиста борящихся за мяч" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                <p class="project-type">Дизайн</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-              <p class="project-type">Дизайн</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/logo-fish.jpeg" alt="логотип ресторана в виде рыбы" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Ресторан Seafood</h2>
+                <p class="project-type">Приложение</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Ресторан Seafood</h2>
-              <p class="project-type">Приложение</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/headphones.jpeg" alt="черные полноразмерные наушники" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Проект Prime</h2>
+                <p class="project-type">Маркетинг</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Проект Prime</h2>
-              <p class="project-type">Маркетинг</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/two-boxes.jpeg" alt="белая и бежевая картонные коробки" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Проект Boxes</h2>
+                <p class="project-type">Приложение</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Проект Boxes</h2>
-              <p class="project-type">Приложение</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/monitor.jpeg" alt="включенный монитор" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Inspiration has no Borders</h2>
+                <p class="project-type">Веб-сайт</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Inspiration has no Borders</h2>
-              <p class="project-type">Веб-сайт</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/open_book.jpeg" alt="открытая книга" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Издание Limited Edition</h2>
+                <p class="project-type">Дизайн</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Издание Limited Edition</h2>
-              <p class="project-type">Дизайн</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/tag.jpeg" alt="белая бирка с веревочкой" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Проект LAB</h2>
+                <p class="project-type">Маркетинг</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Проект LAB</h2>
-              <p class="project-type">Маркетинг</p>
-            </div>
           </li>
           <li class="item">
-            <a href="#">
+            <a class="link" href="#">
               <img src="./images/work-on-laptop.jpeg" alt="ноутбук на котором работают" width="370" height="294">
+              <div class="description">
+                <h2 class="project-name">Growing Business</h2>
+                <p class="project-type">Приложение</p>
+              </div>
             </a>
-            <div class="description">
-              <h2 class="project-name">Growing Business</h2>
-              <p class="project-type">Приложение</p>
-            </div>
           </li>
         </ul>
       </div>
@@ -130,37 +138,41 @@
   </main>
   <footer class="footer">
     <div class="container">
-      <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
-      <address>
-        <ul class="address-list">
-          <li class="item"><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <div class="address-block">
+        <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
+        <address>
+          <ul class="address-list">
+            <li class="item"><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+      <div class="social-network-block">
+        <p class="subscription-title">присоединяйтесь</p>
+        <ul class="social-network footer list">
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg></a>
+          </li>
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg></a>
+          </li>
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg></a>
+          </li>
+          <li class="network-item">
+            <a class="link" href="#"><svg class="icon" width="20px" height="20px">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg></a>
+          </li>
         </ul>
-        <p>присоединяйтесь</p>
-        <ul class="list social-networks">
-          <li class="item">
-            <a class="link" href="">
-              <svg></svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <svg></svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <svg></svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <svg></svg>
-            </a>
-          </li>
-        </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
